tests/NormalTests/paczka1/fuzzy1/40457976.err
Error in line 1: jYgVAXOGSg S375 30,5
Error in line 6: S33 S375 6,8
Error in line 5: jYgVAXOGSg A959 174,3
